@@ -16,6 +16,8 @@ Revision history for Net-Statsd-Lite
 
   - Added additional link to statsd spec in SEE ALSO.
 
+  - Add link to CloudWatch page on StatsD.
+
 v0.6.0    2021-04-25 23:07:35+01:00 Europe/London
   [Enhancements]
   - All measurement methods take an optional `$opts` hashref that can
